# commoner

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  Makefile  Makefile.am  README.md  common.c  common.h  concat.c  configure.ac  itoa.c  test.c  update-version.sh
c/: .gitignore  CMakeLists.txt  Makefile  Makefile.am  README.md  common.c  common.h  concat.c  configure.ac  fun.h  intlen.c  intlen.h  itoa.h  mac.h  rev.c  rev.h
c/compat/: arch.h  os.h
c/concat/: concat.h
c/src/: Makefile  arch.h  cc.h  common.c  common.h  compat.h  concat.c  concat.h  cpeek.c  cpeek.h  intlen.c  itoa.c  mem.c  os.c  os.h  repeat.c  rev.c  str.c  test.c
c/test/: .#check_concat.c  Makefile  Makefile.am  check_concat.c  concat.00.c  concat.01.c  tub.c
doc/: .gitignore  AUTHORS  Makefile.am  README.md  common.3  libcommoner.3  libcommoner.org  libcommoner.texi  licenses.texi
lisp/: argv.lisp  stdio.lisp  stdlib.lisp  unstd.lisp
scm/: common.scm
src/: CMakeLists.txt  Makefile.am  arch.h  cc.h  common.c  common.h  commoner.c  commoner.h  concat.c  fio.c  int.c  internal.h  intlen.c  msg.c  os.c  os.h  repeat.c  rev.c  str.c
src/c/: arch.h  mem.c
test/: Makefile  abs_path.00.c  concat.00.c  concat.01.c  configure.ac  flen.00.c  flen.01.c  int.00.c  main.c  test.c  tub.c
test/f/: README  ipsum.txt  lorem.txt
